--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -1,9 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
-* {
-  font-family: "Montserrat", sans-serif;
-}
+// Variables
+$green: #22b14c;
+$yellow: #ffcd00;
+$gray: #f3f3f3;
 
-h1 {
-  color: red;
+body {
+  margin: 0;
+  background-color: $gray;
+  font-family: "Montserrat", sans-serif;
+  header {
+    padding: 1rem;
+    background-color: $yellow;
+    .logo {
+      width: 100px;
+    }
+  }
+  main {
+    padding: 1rem;
+    .produtos {
+      background-color: #fff;
+      border-radius: 1rem;
+      padding: 1rem;
+      margin: 1rem;
+      box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.12);
+      &__produto {
+        button {
+          color: #fff;
+          padding: 1rem;
+          background-color: $green;
+          border: transparent;
+          border-radius: 0.5rem;
+        }
+      }
+    }
+  }
 }
