--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+* {
+  font-family: "Montserrat", sans-serif; }
+
 body {
   margin: 0;
-  background-color: #f3f3f3;
-  font-family: "Montserrat", sans-serif; }
+  background-color: #f3f3f3; }
   body header {
     padding: 1rem;
     background-color: #ffcd00; }
     body header .logo {
       width: 100px; }
+    body header .menu svg {
+      width: 40px; }
   body main {
     padding: 1rem; }
     body main .produtos {
@@ -16,11 +20,41 @@ body {
       padding: 1rem;
       margin: 1rem;
       box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.12); }
-      body main .produtos__produto button {
-        color: #fff;
-        padding: 1rem;
-        background-color: #22b14c;
-        border: transparent;
-        border-radius: 0.5rem; }
+      body main .produtos hr {
+        border: 1px solid #eaeaea;
+        background: #eaeaea; }
+      body main .produtos__produto {
+        font-weight: 500; }
+      body main .produtos .produto__nome {
+        display: flex;
+        font-size: 1.5rem; }
+        body main .produtos .produto__nome svg {
+          fill: #ffcd00;
+          width: 1rem;
+          margin: 0 1rem; }
+      body main .produtos .produto__preco {
+        display: flex;
+        justify-content: space-between; }
+        body main .produtos .produto__preco-parcelado {
+          color: #22b14c;
+          margin: 0; }
+          body main .produtos .produto__preco-parcelado span {
+            font-size: 2rem; }
+        body main .produtos .produto__preco-avista {
+          margin: 0; }
+          body main .produtos .produto__preco-avista span {
+            color: #22b14c; }
+        body main .produtos .produto__preco-button {
+          color: #fff;
+          cursor: pointer;
+          font-weight: bold;
+          padding: 1rem;
+          background-color: #22b14c;
+          border: transparent;
+          border-radius: 0.3rem; }
+          body main .produtos .produto__preco-button--seta {
+            width: 15px;
+            fill: #fff;
+            margin-left: 10px; }
 
 /*# sourceMappingURL=style.css.map */
